fix(edhr): close ordinary order production and release flow gaps